PARA REMOÇÃO - ADOLESCENTES MUDARAM

--- a/templates/painel-adolescentes.html
+++ b/templates/painel-adolescentes.html
@@ -381,6 +381,9 @@
                             <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="5" data-text="Mudou de área">
                                 <i class="ri-map-pin-line mr-2"></i> Mudou de área
                             </a>
+                            <a href="#" class="proxima-acao-filter-option flex items-center px-4 py-3 text-sm text-gray-700 hover:bg-gray-100" data-acao="7" data-text="Remover do acompanhamento">
+                                <i class="ri-user-unfollow-line mr-2"></i> Remover do acompanhamento
+                            </a>
                         </div>
                     </div>
                     <!-- Botão Ordenar -->
@@ -653,6 +656,11 @@
                                     <span class="radio-mark"></span>
                                     Mudou de área
                                 </label>
+                                <label class="custom-radio">
+                                    <input type="radio" name="action-type" value="7">
+                                    <span class="radio-mark"></span>
+                                    Remover do acompanhamento
+                                </label>
                             </div>
                         </div>
                         <div>
@@ -751,6 +759,7 @@
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="6">Iniciar método em domicílio</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="4">Entrega de convite</div>
                                                 <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="5">Mudou de área</div>
+                                                <div class="cursor-pointer hover:bg-gray-100 p-2 rounded" data-value="7">Remover do acompanhamento</div>
                                             </div>
                                         </div>
                                     </div>
